# kr-prototype

./: Prototype.cabal  README.md
example-data/: baseline-1-new.json  baseline-2-new.json  baseline-3-new.json  baseline-5-new.json  json-converter
src/: Main.hs  Prototypemain.hs  test.json
src/Prototype/: Basis.hs  Composed.hs  Generator.hs  Logic.hs  Serialization.hs  Specialization-old.hs  Specialization.hs  SpecializationOld.hs
test/: BasisSpec.hs  ComposedPrototypesData.hs  ComposedSpec.hs  GeneratorSpec.hs  LogicSpec.hs  Main.hs  Spec.hs  SpecializationData.hs  SpecializationOldData.hs  SpecializationOldSpec.hs  SpecializationSpec.hs  TestData.hs  TestsSpec.hs
