name: Prototype
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved

executable Prototype
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        base >=4 && <5,
        array -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans
    other-modules: Prototypemain

test-suite test-Prototype
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        array,
        hspec >=1.3,
        QuickCheck -any
    default-language: Haskell2010
    hs-source-dirs: test src
    ghc-options: -Wall
    other-modules: Prototypemain
