name: Prototype
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved

executable Prototype
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        base >=4 && <5,
        array -any,
        containers,
        aeson,
        bytestring,
        mtl >=2.2.1,
        data-interval,
        extended-reals
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans
    default-extensions:
      ViewPatterns,
      MultiParamTypeClasses,
      FlexibleInstances,
      FlexibleContexts
    other-modules:
      Prototype.Basis,
      Prototype.Specialization,
      Prototype.Serialization,
      Prototype.Generator,
      Prototype.Display

test-suite test-Prototype
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        array,
        hspec >=1.3,
        QuickCheck -any,
        containers,
        aeson,
        bytestring,
        mtl,
        data-interval,
        extended-reals
    default-language: Haskell2010
    default-extensions:
      ViewPatterns,
      MultiParamTypeClasses,
      FlexibleInstances,
      FlexibleContexts
    hs-source-dirs: test src
    ghc-options: -Wall
    other-modules:
      Prototype.Basis
      Prototype.Specialization
      TestData
      Prototype.Serialization
      ComposedPrototypesData
